# fastshop

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 3b3e7aef66e3_.py  40f8af84ecb8_.py  5b636a033ddc_added_basket.py  b022a93ab7e3_add_basket_model.py  cedcfebfb6ad_add_product_tables.py
migrations/: env.py
migrations/versions/: 799909f2b79d_init.py
ops/environment/: .default.env
ops/scripts/mongo/: init-mongodb.js
src/: admin.py  base_settings.py  main.py  routes.py
src/authentication/: models.py  routes.py  security.py  utils.py  views.py
src/basket/: admin.py
src/basket/models/: sqlalchemy.py
src/catalogue/: admin.py  repository.py  routes.py  services.py  views.py
src/catalogue/models/: database.py  pydantic.py  sqlalchemy.py
src/catalogue/views/: product.py
src/common/: routes.py  service.py
src/common/databases/: mongo_db.py  postgres.py
src/common/repository/: beanie.py  sqlalchemy.py
src/company/models/: database.py  sqlalchemy.py
src/general/: routes.py  views.py
src/general/databases/: postgres.py
src/general/schemas/: common.py
src/reviews/: repositories.py  routes.py  services.py
src/reviews/models/: mongo.py
src/reviews/views/: __init__.py  product_reviews.py
src/users/: admin.py  repository.py  routes.py  services.py
src/users/models/: database.py  pydantic.py  sqlalchemy.py
src/users/views/: user.py  user_address.py
